# cxx-ime

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  install.bat  install.ps1  license.txt  package.bat  uninstall.bat  uninstall.ps1  verify.bat  verify_result.txt
data/: default.json  themes.json
data/schemas/: pinyin.schema.yaml
data/tools/: build_binary.py  dict_convert.py  fetch_dict.py  fetch_wubi.py  fix_syllable_ids.py  spelling_algebra.py
docs/: ascii-composer-redesign.md  ascii-composer.md  candidate-selection-algorithm.md  candidate-selection.md  code-review-2026-05-24.md  dict-architecture.md  dictionary.md  engine-shared-resources-preload.md  install-and-uninstall.md  installation.md  ipc-architecture.md  ipc-high-performance-redesign.md  ipc-module-plan.md  ipc-test-report.md  ipc-testing.md  observability.md  phase-0-abservability-and-benchmark.md  project-design.md  query-budget.md  shared-resources.md  user-dict-sqlite-to-memory.md  user-dictionary.md
docs/plan/: phase-0-task-plan.md
engine/: CMakeLists.txt
engine/include/cxxime/: ascii_composer.h  config.h  context.h  dict.h  engine.h  processor.h  segmentor.h  spellings_index.h  syllabifier.h  translator.h
engine/src/: ascii_composer.cc  binary_format.h  config.cc  context.cc  dict.cc  engine.cc  pinyin_processor.cc  pinyin_segmentor.cc  pinyin_translator.cc  spellings_index.cc  sqlite_dict.cc  syllabifier.cc
ipc/: CMakeLists.txt
ipc/include/cxxime/: ipc_client.h  ipc_server.h
ipc/src/: ipc_client.cc  ipc_server.cc  pipe_channel.cc  security_attributes.h
resource/: gen_icons.py
scripts/: benchmark.bat  cxxime-setup.nsi  install.bat  install.ps1  package.bat  uninstall.bat  uninstall.ps1
server/: CMakeLists.txt
server/src/: main.cc  server_app.cc  server_app.h  session_manager.cc  session_manager.h  tray_icon.cc  tray_icon.h
settings/: CMakeLists.txt  editor_app.cc  editor_app.h  main.cc
shared/: CMakeLists.txt
shared/include/cxxime/: candidate.h  data_path.h  ipc_protocol.h  key_event.h  logging.h  query_budget.h  query_trace.h
shared/src/: key_event.cc  query_trace_log.cc
test/: CMakeLists.txt  benchmark_test.cc  candidate_window_test.cc  config_test.cc  dict_test.cc  engine_test.cc  ipc_test.cc  layout_test.cc  preedit_mode_test.cc  segmentor_test.cc  test_main.cc  wubi_test.cc
test/util/: testutil.cc  testutil.h
tools/: README.md
tools/candidate_window_tool/: CMakeLists.txt  main.cc
tools/dict_query/: CMakeLists.txt  main.cc
tools/ipc_test/: CMakeLists.txt  main.cc
tools/query_bench/: CMakeLists.txt  cases.txt  main.cc
tools/sqlite_query/: CMakeLists.txt  main.cc
tools/tsf_position_tool/: CMakeLists.txt  main.cc
tsf/: CMakeLists.txt  cxxime_tsf.def  cxxime_tsf.rc
tsf/src/: class_factory.cpp  class_factory.h  composition.cpp  display_attribute.cpp  display_attribute.h  dllmain.cpp  edit_session.cpp  edit_session.h  globals.cpp  globals.h  key_event_sink.cpp  language_bar.cpp  language_bar.h  pch.h  preedit_mode.h  register.cpp  register.h  resource.h  text_service.cpp  text_service.h
ui/: CMakeLists.txt
ui/include/cxxime/: candidate_window.h  layout.h  render_context.h  renderer.h
ui/src/: candidate_window.cc  d2d_renderer.cc  gdi_renderer.cc  gdi_renderer.h  layout.cc  theme.cc
