project(cxxime-test CXX)

set(TEST_COMMON_SOURCES util/testutil.cc)
set(TEST_COMMON_DEPS cxxime-shared cxxime-engine cxxime-ui cxxime-ipc)
set(TEST_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/tsf/src)

function(add_cxxime_test name)
    add_executable(${name} ${name}.cc ${TEST_COMMON_SOURCES})
    target_include_directories(${name} PRIVATE ${TEST_INCLUDE_DIRS})
    target_link_libraries(${name} PRIVATE ${TEST_COMMON_DEPS})
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_cxxime_test(engine_test)
add_cxxime_test(segmentor_test)
add_cxxime_test(dict_test)
add_cxxime_test(config_test)
add_cxxime_test(layout_test)
add_cxxime_test(preedit_mode_test)
add_cxxime_test(ipc_test)
